@@ -1,5 +1,8 @@
 version 0.2.7
-- lbj_logger object now has an (experimental) $plot() method.
+- 'lbj_logger' object now has an (experimental) $plot() method.
+- Objects inheriting from 'confrontation' now store event metadata. See ?event.
+- Objects of class 'validator' now store (default) metadata on expression 
+  language and rule severity.
 
 version 0.2.6
 - New methods 'all' and 'any' for 'validation' objects
